fixed paddings on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,10 @@
     flex-direction: column-reverse;
     align-items: center;
     gap: 25px;
+    padding: 0;
+  }
+
+  .bio {
     padding: 15px 45px;
   }
 }
